--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
   "trailingComma": "es5",
+  "printWidth": 100,
   "tabWidth": 2,
   "semi": false,
-  "singleQuote": true
+  "singleQuote": true,
+  "bracketSameLine": true
 }
