--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "portfolio-website",
   "version": "0.1.0",
-  "homepage": "https://andreir.me/",
-  "private": true,
+  "homepage": "https://andreir.me",
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
